# miletto_data_platform

./: AGENTS.md  README.md  pyproject.toml  skills-lock.json
.cursor/rules/: coding.mdc  communication.mdc
.cursor/skills/data-contract/: SKILL.md
.cursor/skills/databricks-pipelines/: SKILL.md
.cursor/skills/python-testing/: SKILL.md
.github/workflows/: deploy.yml
UI/: README.md
UI/app/: app.py
UI/instructions/: .cursorrules
agents/agno/: contract_agent.py
contracts/instructions/: .cursorrules
data_contract/: data_contracts.json
data_contract/instructions/: .cursorrules
databricks/: README.md
databricks/ingestion-pipelines/pipelines_metadata/raw/: raw_data_pipes.json
databricks/ingestion-pipelines/pipelines_metadata/silver/: contracts.json  job_bronze_to_silver.json
databricks/ingestion-pipelines/pipelines_notebooks_templates/bronze/: bronze_pipeline_creator.py  dlt bronze pipeline.ipynb
databricks/ingestion-pipelines/pipelines_notebooks_templates/helpers/: general_helpers.py  quality_helpers.py
databricks/ingestion-pipelines/pipelines_notebooks_templates/raw/: crypto_prices_raw_data.py  iss_raw_data.py  open_brewery_raw_data.py  pokemon_raw_data.py  raw_pipeline_creator.py  weather_data_raw_data.py
databricks/ingestion-pipelines/pipelines_notebooks_templates/silver/: silver_pipeline.py
databricks/instructions/: .cursorrules  AGENT_INSTRUCTIONS.md  bronze_pipelines_file_template.py
kafka/: topics.yaml
kafka/instructions/: .cursorrules
miletto_data_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_smoke.py
(+4 files in other folders)
