[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miletto-data-platform"
version = "0.0.0"
description = "Monorepo for data platform assets (Databricks, Kafka, contracts)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.3",
]
kafka = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]
contracts = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]
ui = [
    "streamlit>=1.40",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["databricks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = [
    "^databricks/",
]

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
